Generating list, need to figure out how to make css portable and customizable, as well as do a code review and unit tests..

--- a/style.css
+++ b/style.css
@@ -37,3 +37,16 @@ body {
 .center {
     text-align: center;
 }
+
+
+#mapPlugin  {
+    border: 1px solid #000000;
+    overflow: auto;
+    width: 100%
+}
+#mapPlugin div.mapViewport {float: left;
+    width: 720px;
+}
+#mapPlugin div.mapControls {float: left;
+    width: 220px;
+}
